--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_instruction">InstructionActivity</string>
 
+    <string name="squirrel">squirrel image</string>
+    <string name="app_curious_world">It is a curious world.</string>
+    <string name="title_activity_private_words_results">PrivateWordsResultsActivity</string>
+
     <string name="hello_world">Hello world!</string>
 </resources>
